# openai-generate-pr-description-action

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  cspell.json  pyproject.toml  requirements.txt
.github/workflows/: auto-assign.yml  generate-pr-description.yml  pre-commit.yml
docs/: README.ja.md
scripts/: generate_pr_description.py
