[project]
name = "generate-pr-description-action"
version = "0.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai==1.54.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "openai==1.54.3",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C"]
ignore = ["E501"]  # 長い行を無視する場合

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # 未使用インポートを許容
